--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -2,11 +2,10 @@
 *
 *
 /*=================Layout=============== */
-html, body, .capa {
+html, body{
 	height: 100%;
 }
 body{
-	
 	background: url('imagens/'), 
 	url('imagens/'),
 	linear-gradient(45deg,#806547);
@@ -23,9 +22,8 @@ body{
 	height: 40px;
 	width: 132px;
 	display: block;
-	background: url('imagens/logo.png') no-repeat;
+	background: url('/imagens/logo.png') no-repeat;
 	background-size: contain;
-	color: transparent;
 }
 
 nav.navbar-transparente{
@@ -135,7 +133,7 @@ footer{
 
 /*===============Tipografia=====================*/
 h1{
-	font-size: 3em;
+	font-size: 40em;
 	font-weight: 900;
 	letter-spacing: -0.08em;
 	margin-bottom: 30px;
